# dz_22_online_store

./: README.md  catalog_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  header.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
blog/templates/blog/includes/: footer.html  inc_menu.html
catalog/: models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_image_and_more.py
catalog/templates/: base.html  contacts.html  header.html  home.html  product_info.html
catalog/templates/catalog/: base.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: footer.html  inc_menu.html
config/: settings.py  urls.py
